--- a/tasks/styles/scss/style.scss
+++ b/tasks/styles/scss/style.scss
@@ -1,4 +1,3 @@
-/* @import "custom"; */
 @import "colors";
 
 * {
@@ -10,10 +9,6 @@
 
 body {
     background: $white;
-}
-
-.colorRed {
-    color: $red;
 }
 
 section.banner-img-top {
@@ -36,13 +31,29 @@ section.what-everest {
         background: $blue;
         color: $white;
         padding: 30px 30px;
-        display:flex;
+        display: flex;
     }
+}
+
+section.everest-community {
+    font-weight: bold;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
 }
 
 section.investment-thesis-section {
     background: $gray;
     padding: 50px 0;
+
+    .title {
+        font-size: 1.5em;
+        font-weight: bolder;
+        padding: 30px 0;
+        color: $blue;
+    }
 
     .card {
         background: $white;
@@ -53,6 +64,14 @@ section.investment-thesis-section {
         position: relative;
         margin: 10px 30px;
         min-height: 90px;
+    }
+
+    .block {
+        overflow: hidden;
+        padding: 10px;
+        position: relative;
+        margin-top: unset;
+        display: inline-block;
     }
 
     input {
@@ -132,7 +151,7 @@ section.investment-thesis-section {
         counter-reset: numbering-inc;
         counter-increment: numbering-inc 0;
 
-        div.num-1:before {
+        li:before {
             content: counter(numbering-inc);
             counter-increment: numbering-inc;
             background: $red;
@@ -149,7 +168,7 @@ section.investment-thesis-section {
         counter-reset: numbering-2;
         counter-increment: numbering-2 3;
 
-        div.num-1:before {
+        li:before {
             content: counter(numbering-2);
             counter-increment: numbering-2;
             background: $red;
@@ -161,55 +180,6 @@ section.investment-thesis-section {
             margin: 0px 10px;
         }
     }
-}
-
-section.everest-community {
-    font-weight: bold;
-    font-size: 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 50px;
-}
-
-.bg-blue-1 {
-    background: $blue;
-    color: $white;
-    padding: 30px 30px;
-
-}
-
-.block {
-    overflow: hidden;
-    padding: 10px;
-    position: relative;
-    margin-top: unset;
-}
-
-.center-1 {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-
-.block-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-
-.border-1 {
-    border: 1px solid $white;
-    padding: 20px;
-}
-
-.border-2 {
-    background: $gray;
-    border: 1px solid #cecbcb;
-    padding: 30px;
-    border-radius: 5px;
-    width: 30%;
 }
 
 section.data-glance {
@@ -224,6 +194,67 @@ section.data-glance {
         margin: 10px 30px;
         min-height: 115px;
     }
+
+    .border-1 {
+        border: 1px solid $white;
+        padding: 20px;
+    }
+
+    .bg-blue-1 {
+        background: $blue;
+        color: $white;
+        padding: 30px 30px;
+
+    }
+}
+
+section.talk-directly {
+    margin: 10px 30px;
+    padding: 30px;
+
+    .talk-1 {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .meeting-svg-1 {
+        max-width: 100px;
+        padding: 20px;
+    }
+
+    .meet-text {
+        padding: 10px;
+    }
+
+    .border-2 {
+        background: $gray;
+        border: 1px solid #cecbcb;
+        padding: 30px;
+        border-radius: 5px;
+        width: 30%;
+    }
+}
+
+section.sign-up-for-investor-alert {
+    background: $gray;
+    padding: 50px 0;
+
+    .sign-up-alt {
+        color: $blue;
+        padding: 20px;
+    }
+}
+
+section.download-1 {
+    background: $white;
+    padding: 50px 0;
+}
+
+.center-1 {
+    display: grid;
+    justify-content: center;
+    align-items: center;
 }
 
 .flt-r {
@@ -238,46 +269,9 @@ section.data-glance {
     float: center;
 }
 
-.meeting-svg-1 {
-    max-width: 100px;
-    padding: 20px;
-}
-
-.meet-text {
-    padding: 10px;
-}
-
-section.talk-directly {
-    margin: 10px 30px;
-    padding: 30px;
-
-    .talk-1 {
-        display: grid;
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-
-section.sign-up-for-investor-alert {
-    background: $gray;
-    padding: 50px 0;
-
-    .sign-up-alt {
-        color: $blue;
-        padding: 20px;
-    }
-}
-
-
 .btn-clr-blue {
     background: $blue;
     color: $white;
     border-radius: 75px;
     padding: 3px 30px;
-}
-
-section.download-1 {
-    background: $white;
-    padding: 50px 0;
 }
