--- a/tasks/styles/css/style.css
+++ b/tasks/styles/css/style.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   font-family: "Poppins", georgia, serif;
 }
 
@@ -28,14 +25,29 @@ section.what-everest .bg-blue {
   padding: 30px 30px;
   display: flex;
 }
+section.what-everest .blog-content-1 {
+  font-size: 1em;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+section.what-everest .title {
+  font-size: 1.8em;
+  font-weight: bold;
+}
+section.what-everest a {
+  color: #fff;
+}
 
 section.everest-community {
-  font-weight: bold;
-  font-size: 1.5rem;
+  font-weight: normal;
+  font-size: 1.7em;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 50px;
+  padding-left: 20%;
+  padding-right: 20%;
+  color: #183c68;
 }
 
 section.investment-thesis-section {
@@ -47,7 +59,8 @@ section.investment-thesis-section {
 section.investment-thesis-section .title {
   font-size: 1.5em;
   font-weight: bolder;
-  padding: 30px 0;
+  padding: 0px 0px;
+  padding-bottom: 20px;
   color: #183c68;
 }
 section.investment-thesis-section .card {
@@ -65,7 +78,7 @@ section.investment-thesis-section .block {
   padding: 10px;
   position: relative;
   margin-top: unset;
-  display: inline-block;
+  display: flex;
 }
 section.investment-thesis-section input {
   position: absolute;
@@ -80,6 +93,7 @@ section.investment-thesis-section .tabs {
 section.investment-thesis-section .tab {
   color: #000;
   overflow: hidden;
+  min-height: 130px;
 }
 section.investment-thesis-section .tab-label {
   display: flex;
@@ -88,7 +102,7 @@ section.investment-thesis-section .tab-label {
   background: #fff;
   font-weight: bold;
   cursor: pointer;
-  min-height: 40px;
+  min-height: 60px;
   /* Icon */
 }
 section.investment-thesis-section .tab-label::after {
@@ -98,7 +112,6 @@ section.investment-thesis-section .tab-label::after {
 }
 section.investment-thesis-section .tab-content {
   max-height: 0;
-  padding: 0 1em;
   color: #000;
   background: #fff;
   transition: all 0.35s;
@@ -124,31 +137,38 @@ section.investment-thesis-section .number-1 {
   counter-reset: numbering-inc;
   counter-increment: numbering-inc 0;
 }
+section.investment-thesis-section .number-1 ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 20px;
+  justify-content: space-evenly;
+  padding: 5px 30px;
+  /* li {
+      min-height: 100px;
+  } */
+}
+@media screen and (max-width: 767px) {
+  section.investment-thesis-section .number-1 ul {
+    flex-direction: column;
+  }
+}
 section.investment-thesis-section .number-1 li:before {
   content: counter(numbering-inc);
   counter-increment: numbering-inc;
   background: #C93636;
   padding: 10px;
   position: relative;
-  top: 0px;
+  top: 20px;
   font-weight: bold;
   color: #fff;
   margin: 0px 10px;
-}
-section.investment-thesis-section .number-2 {
-  counter-reset: numbering-2;
-  counter-increment: numbering-2 3;
-}
-section.investment-thesis-section .number-2 li:before {
-  content: counter(numbering-2);
-  counter-increment: numbering-2;
-  background: #C93636;
-  padding: 10px;
-  position: relative;
-  top: 0px;
-  font-weight: bold;
-  color: #fff;
-  margin: 0px 10px;
+  z-index: 1;
+  margin: 60px;
 }
 
 section.data-glance .data-1 {
@@ -160,7 +180,7 @@ section.data-glance .data-1 {
   padding: 20px;
   position: relative;
   margin: 10px 30px;
-  min-height: 115px;
+  min-height: 135px;
 }
 section.data-glance .border-1 {
   border: 1px solid #fff;
@@ -170,44 +190,151 @@ section.data-glance .bg-blue-1 {
   background: #183c68;
   color: #fff;
   padding: 30px 30px;
+  padding-left: 2%;
+}
+section.data-glance .country-name {
+  font-size: 1.1em;
+  padding: 1em;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+section.data-glance b {
+  font-size: 2em;
+}
+section.data-glance .title {
+  font-size: 1.5em;
+  font-weight: bold;
+  padding: 30px 0px;
+  padding-bottom: 30px;
+  color: #fff;
+}
+section.data-glance .content-1 {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 20px;
+  justify-content: space-evenly;
+  padding: 5px 30px;
+}
+@media screen and (max-width: 767px) {
+  section.data-glance .content-1 {
+    flex-direction: column;
+  }
 }
 
 section.talk-directly {
-  margin: 10px 30px;
-  padding: 30px;
+  margin: 10px 10px;
+  padding: 30px 30px;
 }
-section.talk-directly .talk-1 {
-  display: grid;
-  justify-content: center;
-  align-items: center;
+section.talk-directly .title {
+  font-size: 1.8em;
+  font-weight: 600;
+  padding: 30px 0px;
+  padding-bottom: 30px;
+  color: #183c68;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 767px) {
+  section.talk-directly .title {
+    flex-direction: column;
+    align-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+section.talk-directly .title span {
+  font-weight: 400 !important;
+  font-size: small;
 }
 section.talk-directly .meeting-svg-1 {
-  max-width: 100px;
-  padding: 20px;
+  max-width: 90px;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0 auto;
 }
 section.talk-directly .meet-text {
   padding: 10px;
 }
-section.talk-directly .border-2 {
+section.talk-directly .border-1 {
   background: #f5f5f5;
   border: 1px solid #cecbcb;
-  padding: 30px;
   border-radius: 5px;
-  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: start;
+  margin: 20px 10px;
+}
+@media screen and (max-width: 767px) {
+  section.talk-directly .border-1 {
+    flex-direction: column;
+    align-items: start;
+    margin: 10px 10px;
+    padding: 10px 20px;
+  }
+}
+section.talk-directly .content-1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 5px 10px;
+}
+section.talk-directly .content-1 p {
+  font-size: 1.2em;
+  font-weight: 300;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  position: relative;
+  top: 15px;
 }
 
 section.sign-up-for-investor-alert {
   background: #f5f5f5;
-  padding: 50px 0;
+  padding: 30px 30px;
 }
-section.sign-up-for-investor-alert .sign-up-alt {
+section.sign-up-for-investor-alert .title {
   color: #183c68;
-  padding: 20px;
+  padding: 30px 10px;
+  font-size: 1.6em;
+  font-weight: 600;
+}
+section.sign-up-for-investor-alert .img-phn {
+  position: relative;
+  top: 80px;
+  /*  @media screen and (max-width: 416px) {
+      top: 0px;
+  } */
+}
+@media screen and (max-width: 767px) {
+  section.sign-up-for-investor-alert .img-phn {
+    top: 0px;
+  }
+}
+section.sign-up-for-investor-alert .form-control {
+  border: 1px #ccc !important;
+  border-radius: 0px !important;
 }
 
 section.download-1 {
   background: #fff;
-  padding: 50px 0;
+  padding: 30px 30px;
+}
+section.download-1 .title {
+  color: #183c68;
+  padding: 30px 10px;
+  font-size: 1.6em;
+  font-weight: 600;
+}
+section.download-1 .form-control {
+  border: 1px #fff !important;
+  border-radius: 0px !important;
+  background: #f5f5f5;
 }
 
 .center-1 {
@@ -231,6 +358,7 @@ section.download-1 {
 .btn-clr-blue {
   background: #183c68;
   color: #fff;
+  border: 1px solid #183c68;
   border-radius: 75px;
   padding: 3px 30px;
 }
