--- a/tasks/styles/scss/style.scss
+++ b/tasks/styles/scss/style.scss
@@ -1,9 +1,6 @@
 @import "colors";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     font-family: "Poppins", georgia, serif;
 }
 
@@ -33,15 +30,33 @@ section.what-everest {
         padding: 30px 30px;
         display: flex;
     }
+
+    .blog-content-1 {
+        font-size: 1em;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .title {
+        font-size: 1.8em;
+        font-weight: bold;
+    }
+
+    a {
+        color: $white;
+    }
 }
 
 section.everest-community {
-    font-weight: bold;
-    font-size: 1.5rem;
+    font-weight: normal;
+    font-size: 1.7em;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 50px;
+    padding-left: 20%;
+    padding-right: 20%;
+    color: $blue;
 }
 
 section.investment-thesis-section {
@@ -51,7 +66,8 @@ section.investment-thesis-section {
     .title {
         font-size: 1.5em;
         font-weight: bolder;
-        padding: 30px 0;
+        padding: 0px 0px;
+        padding-bottom: 20px;
         color: $blue;
     }
 
@@ -64,6 +80,7 @@ section.investment-thesis-section {
         position: relative;
         margin: 10px 30px;
         min-height: 90px;
+
     }
 
     .block {
@@ -71,7 +88,7 @@ section.investment-thesis-section {
         padding: 10px;
         position: relative;
         margin-top: unset;
-        display: inline-block;
+        display: flex;
     }
 
     input {
@@ -90,6 +107,7 @@ section.investment-thesis-section {
     .tab {
         color: $black;
         overflow: hidden;
+        min-height: 130px;
 
         &-label {
             display: flex;
@@ -98,7 +116,7 @@ section.investment-thesis-section {
             background: $white;
             font-weight: bold;
             cursor: pointer;
-            min-height: 40px;
+            min-height: 60px;
 
             /* Icon */
             &::after {
@@ -110,7 +128,7 @@ section.investment-thesis-section {
 
         &-content {
             max-height: 0;
-            padding: 0 1em;
+            // padding: 0 1em;
             color: $black;
             background: $white;
             transition: all .35s;
@@ -147,9 +165,33 @@ section.investment-thesis-section {
 
     /* counter  */
 
+
     .number-1 {
         counter-reset: numbering-inc;
         counter-increment: numbering-inc 0;
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            padding-bottom: 20px;
+            justify-content: space-evenly;
+            padding: 5px 30px;
+            // max-height: 200px;
+
+            @media screen and (max-width: 767px) {
+                flex-direction: column;
+            }
+
+            /* li {
+                min-height: 100px;
+            } */
+
+        }
 
         li:before {
             content: counter(numbering-inc);
@@ -157,32 +199,19 @@ section.investment-thesis-section {
             background: $red;
             padding: 10px;
             position: relative;
-            top: 0px;
+            top: 20px;
             font-weight: bold;
-            color: $white;
+            color: #fff;
             margin: 0px 10px;
+            z-index: 1;
+            margin: 60px;
         }
     }
 
-    .number-2 {
-        counter-reset: numbering-2;
-        counter-increment: numbering-2 3;
-
-        li:before {
-            content: counter(numbering-2);
-            counter-increment: numbering-2;
-            background: $red;
-            padding: 10px;
-            position: relative;
-            top: 0px;
-            font-weight: bold;
-            color: $white;
-            margin: 0px 10px;
-        }
-    }
 }
 
 section.data-glance {
+
     .data-1 {
         background: $blue;
         color: $white;
@@ -192,7 +221,7 @@ section.data-glance {
         padding: 20px;
         position: relative;
         margin: 10px 30px;
-        min-height: 115px;
+        min-height: 135px;
     }
 
     .border-1 {
@@ -204,51 +233,172 @@ section.data-glance {
         background: $blue;
         color: $white;
         padding: 30px 30px;
+        padding-left: 2%;
+    }
 
+    .country-name {
+        font-size: 1.1em;
+        padding: 1em;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    b {
+        font-size: 2em;
+    }
+
+    .title {
+        font-size: 1.5em;
+        font-weight: bold;
+        padding: 30px 0px;
+        padding-bottom: 30px;
+        color: $white;
+    }
+
+    .content-1 {
+        display: flex;
+        flex-direction: row;
+        padding-bottom: 20px;
+        justify-content: space-evenly;
+        padding: 5px 30px;
+
+        @media screen and (max-width: 767px) {
+            flex-direction: column;
+        }
     }
 }
 
 section.talk-directly {
-    margin: 10px 30px;
-    padding: 30px;
+    margin: 10px 10px;
+    padding: 30px 30px;
 
-    .talk-1 {
-        display: grid;
-        justify-content: center;
-        align-items: center;
+    .title {
+        font-size: 1.8em;
+        font-weight: 600;
+        padding: 30px 0px;
+        padding-bottom: 30px;
+        color: $blue;
+        display: flex;
+        flex-direction: column;
+        align-content: flex-end;
+        flex-wrap: wrap;
+
+        @media screen and (max-width: 767px) {
+            flex-direction: column;
+            align-content: flex-start;
+            flex-wrap: wrap;
+        }
+
+        span {
+            font-weight: 400 !important;
+            font-size: small;
+        }
     }
 
     .meeting-svg-1 {
-        max-width: 100px;
-        padding: 20px;
+        max-width: 90px;
+        padding: 10px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin: 0 auto;
     }
 
     .meet-text {
         padding: 10px;
     }
 
-    .border-2 {
+    .border-1 {
         background: $gray;
         border: 1px solid #cecbcb;
-        padding: 30px;
         border-radius: 5px;
-        width: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: start;
+        margin: 20px 10px;
+        // min-width: 40%;
+        // padding: 10px 30px;
+
+        @media screen and (max-width: 767px) {
+            flex-direction: column;
+            align-items: start;
+            margin: 10px 10px;
+            padding: 10px 20px;
+        }
+    }
+
+    .content-1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 5px 10px;
+
+        // padding: 5px 30px;
+        p {
+            font-size: 1.2em;
+            font-weight: 300;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            justify-content: center;
+            position: relative;
+            top: 15px;
+
+            // flex-wrap: wrap;
+
+        }
     }
 }
 
 section.sign-up-for-investor-alert {
     background: $gray;
-    padding: 50px 0;
+    padding: 30px 30px;
 
-    .sign-up-alt {
+    .title {
         color: $blue;
-        padding: 20px;
+        padding: 30px 10px;
+        font-size: 1.6em;
+        font-weight: 600;
+    }
+
+    .img-phn {
+        position: relative;
+        top: 80px;
+
+        @media screen and (max-width: 767px) {
+            top: 0px;
+        }
+
+        /*  @media screen and (max-width: 416px) {
+            top: 0px;
+        } */
+    }
+
+    .form-control {
+        border: 1px #ccc !important;
+        border-radius: 0px !important;
     }
 }
 
+
 section.download-1 {
     background: $white;
-    padding: 50px 0;
+    padding: 30px 30px;
+
+    .title {
+        color: $blue;
+        padding: 30px 10px;
+        font-size: 1.6em;
+        font-weight: 600;
+    }
+
+    .form-control {
+        border: 1px $white !important;
+        border-radius: 0px !important;
+        background: $gray;
+    }
 }
 
 .center-1 {
@@ -272,6 +422,7 @@ section.download-1 {
 .btn-clr-blue {
     background: $blue;
     color: $white;
+    border: 1px solid $blue;
     border-radius: 75px;
     padding: 3px 30px;
 }
