--- a/tasks/styles/scss/style.scss
+++ b/tasks/styles/scss/style.scss
@@ -27,7 +27,7 @@ section.what-everest {
     .bg-blue {
         background: $blue;
         color: $white;
-        padding: 30px 30px;
+        padding: 30px;
         display: flex;
     }
 
@@ -66,7 +66,7 @@ section.investment-thesis-section {
     .title {
         font-size: 1.5em;
         font-weight: bolder;
-        padding: 0px 0px;
+        padding: 0;
         padding-bottom: 20px;
         color: $blue;
     }
@@ -202,7 +202,7 @@ section.investment-thesis-section {
             top: 20px;
             font-weight: bold;
             color: #fff;
-            margin: 0px 10px;
+            margin: 0 10px;
             z-index: 1;
             margin: 60px;
         }
@@ -232,7 +232,7 @@ section.data-glance {
     .bg-blue-1 {
         background: $blue;
         color: $white;
-        padding: 30px 30px;
+        padding: 30px;
         padding-left: 2%;
     }
 
@@ -250,7 +250,7 @@ section.data-glance {
     .title {
         font-size: 1.5em;
         font-weight: bold;
-        padding: 30px 0px;
+        padding: 30px 0;
         padding-bottom: 30px;
         color: $white;
     }
@@ -269,13 +269,13 @@ section.data-glance {
 }
 
 section.talk-directly {
-    margin: 10px 10px;
-    padding: 30px 30px;
+    margin: 10px;
+    padding: 30px;
 
     .title {
         font-size: 1.8em;
         font-weight: 600;
-        padding: 30px 0px;
+        padding: 30px 0;
         padding-bottom: 30px;
         color: $blue;
         display: flex;
@@ -323,7 +323,7 @@ section.talk-directly {
         @media screen and (max-width: 767px) {
             flex-direction: column;
             align-items: start;
-            margin: 10px 10px;
+            margin: 10px;
             padding: 10px 20px;
         }
     }
@@ -354,7 +354,7 @@ section.talk-directly {
 
 section.sign-up-for-investor-alert {
     background: $gray;
-    padding: 30px 30px;
+    padding: 30px;
 
     .title {
         color: $blue;
@@ -368,7 +368,7 @@ section.sign-up-for-investor-alert {
         top: 80px;
 
         @media screen and (max-width: 767px) {
-            top: 0px;
+            top: 0;
         }
 
         /*  @media screen and (max-width: 416px) {
@@ -378,14 +378,14 @@ section.sign-up-for-investor-alert {
 
     .form-control {
         border: 1px #ccc !important;
-        border-radius: 0px !important;
+        border-radius: 0 !important;
     }
 }
 
 
 section.download-1 {
     background: $white;
-    padding: 30px 30px;
+    padding: 30px;
 
     .title {
         color: $blue;
@@ -396,7 +396,7 @@ section.download-1 {
 
     .form-control {
         border: 1px $white !important;
-        border-radius: 0px !important;
+        border-radius: 0 !important;
         background: $gray;
     }
 }
